# magicbind

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/floodfill/: README.md  main.py  pyproject.toml
examples/floodfill/cpp/: flood_fill.cpp  flood_fill.h
examples/mandelbrot/: README.md  main.py  pyproject.toml
examples/mandelbrot/cpp/: mandelbrot.cpp  mandelbrot.h
examples/notebook/: README.md  magicbind_colab.ipynb  magicbind_demo.ipynb  pyproject.toml
examples/opencv/: README.md  main.py  pyproject.toml
examples/opencv/cpp/: image_ops.cpp  image_ops.h
examples/simple/: README.md  main.py  pyproject.toml
examples/simple/cpp/: math_utils.cpp  math_utils.h
src/magicbind/: __init__.py  cli.py  codegen.py  header_parser.py  magic.py
src/magicbind/include/: magicbind_opencv.h
tests/: conftest.py  test_codegen.py  test_integration.py  test_parser.py
tests/fixtures/: math_utils.cpp  math_utils.h
