[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "magicbind"
version = "0.2.6"
description = "Automatically build and install Python extension modules from C++ headers"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "libclang>=18.1.1",
    "nanobind>=2.12.0",
    "numpy>=2.4.4",
    "ziglang>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/robomei/magicbind"
Repository = "https://github.com/robomei/magicbind"
Issues = "https://github.com/robomei/magicbind/issues"

[project.scripts]
magicbind = "magicbind.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
magicbind = ["include/*.h"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
